# ROS_MobileRobot

./: README.md
mobile_platform_descpription/: CMakeLists.txt  ReadMe
mobile_platform_descpription/config/: joint_names_mobile_platform_description.yaml
mobile_platform_descpription/launch/: gazebo.launch
mobile_platform_descpription/src/: mobile_encoder.cpp
mobile_platform_descpription/urdf/: .mbl_plf.gazebo.swo  .mbl_plf.gazebo.swp  mbl_plf.gazebo  mobile_platform_description.xacro
mobile_platform_descpription/worlds/: vehicle.world
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/launch/: mobile_ctrl.launch
vehicle_control/msg/: commendMsg.msg  gnd.msg  jointstatesMsg.msg  posMsgs.msg  tfMsg.msg  trjMsg.msg
vehicle_control/src/: .odom_node.cpp.swo  .odom_node.cpp.swp  cmd_publish.cpp  encoder_node.cpp  kalman_comb.cpp  kalman_node.cpp  kalman_v3.cpp  motor_dynamics.cpp  odom_node (copy).cpp  odom_node.cpp  vehicle_controller.cpp  vehicle_controller.cpp.save
